[package]
name = "hash_checker"
version = "1.0.0"
edition = "2021"
description = "Check the SHA256 hash of text or files."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.27.0"
eframe = { version = "0.27.0", default-features = false, features = [
    # "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"

env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
sha2 = "0.10.8"
rfd = "0.13"
